# visiocyte

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENSE  README  README.md  build.bat  build.cmake  build.linux  build.macx  build_VS2008.cmake  build_VS2010.cmake  build_VS2012.cmake  build_VS2013.cmake  build_VS2015.cmake  build_msvc.bat  hudson_build.bat  nmake_release.bat  visiocyte.files  visiocyte.includes
experimental/brunsc/python_console/: CMakeLists.txt  CommandRing.h  ImageWindow.h  PythonConsolePlugin.cpp  PythonConsolePlugin.h  PythonConsoleWindow.cpp  PythonConsoleWindow.h  PythonInterpreter.cpp  PythonInterpreter.h  VISIOCYTEPythonModule.cpp  VISIOCYTEPythonModule.h  convert_c_array_struct.h  convert_qbool.h  convert_qhash.h  convert_qlist.h  convert_qstring.h  main_python_console.ui  pythonConsoleTest.cpp  run_epydoc.cmake.in  visiocyte_qt_environment.h  wrap_visiocyte_boost.py  wrappable_visiocyte.cpp  wrappable_visiocyte.h
released_plugins_more/: CMakeLists.txt  CTestConfig.cmake  README  build_plugindemo.bat  build_plugindemo.sh  build_plugindemo_msvc.bat  build_plugindemo_msvc_list.bat  error_plugins_msvc.txt  final_windows_plugins.txt  linux_plugins.txt
released_plugins_more/CMake/: PluginConfiguration.cmake
released_plugins_more/multi_channel_swc/: multi_channel_swc.pro  multi_channel_swc_dialog.cpp  multi_channel_swc_dialog.h  multi_channel_swc_func.cpp  multi_channel_swc_func.h  multi_channel_swc_plugin.cpp  multi_channel_swc_plugin.h  multi_channel_swc_template.h
released_plugins_more/special_visiocyte_plugins/bioformat/: Readme  bioFormat_ex.cpp  bioFormat_ex.h  bioFormat_ex_32.pro  bioFormat_ex_64.pro  bioFormat_ex_win32.pro  bioFormat_ex_win64.pro  imageIO_bioformat.cpp  imageIO_bioformat.h
released_plugins_more/special_visiocyte_plugins/teramanager/: BUILD  changelog.txt  teramanager.pro
released_plugins_more/visiocyte_plugins/: CMakeLists.txt
released_plugins_more/visiocyte_plugins/5dstackconverter/: CMakeLists.txt  movieZCswitch.cpp  movieZCswitch.h  movieZCswitch.pro
released_plugins_more/visiocyte_plugins/Janelia_blend_multiscanstacks/: CMakeLists.txt  basic_4dimage_ori.cpp  imageblend.cpp  imageblend.h  imageblend.pro
released_plugins_more/visiocyte_plugins/Janelia_clonalselect/: CMakeLists.txt  clonalselect.cpp  clonalselect.h  clonalselect.pro  clonalselect_gui.cpp  clonalselect_gui.h
released_plugins_more/visiocyte_plugins/Janelia_ifusion/: CMakeLists.txt  ifusion.cpp  ifusion.h  ifusion.pro
released_plugins_more/visiocyte_plugins/Janelia_ireg/: CMakeLists.txt  ireg.cpp  ireg.h  ireg.pro  y_imgreg.h
released_plugins_more/visiocyte_plugins/Janelia_istitch/: CMakeLists.txt  istitch.cpp  istitch.pro  istitch_gui.h  readme  y_imglib.h
released_plugins_more/visiocyte_plugins/Janelia_lobeseg/: CMakeLists.txt  lobeseg.pro  lobeseg_func.cpp  lobeseg_func.h  lobeseg_gui.h  lobeseg_plugin.cpp  lobeseg_plugin.h
released_plugins_more/visiocyte_plugins/Janelia_refextract/: CMakeLists.txt  refextract.cpp  refextract.h  refextract.pro
released_plugins_more/visiocyte_plugins/Janelia_ssd_registration/: CMakeLists.txt  main_affine_nonrigid_registration.sh  main_affine_registration.cpp  plugin_PQ_imagereg.pro  plugin_image_registration.cpp  plugin_image_registration.h  plugin_nonrigid_registration.cpp  plugin_nonrigid_registration.h
released_plugins_more/visiocyte_plugins/NifTi_reader/: NifTi_reader.pro  NifTi_reader_plugin.cpp  NifTi_reader_plugin.h  readme
released_plugins_more/visiocyte_plugins/SWC_Resample_plugin/: SWC_Resample.pro  SWC_Resample_plugin.cpp  SWC_Resample_plugin.h
released_plugins_more/visiocyte_plugins/TipDetection/: TipDetection.pro  TipDetection_plugin.cpp  TipDetection_plugin.h
released_plugins_more/visiocyte_plugins/ZMovieMaker/: ZMovieMaker.pro  ZMovieMaker_plugin.cpp  ZMovieMaker_plugin.h
released_plugins_more/visiocyte_plugins/ada_threshold/: CMakeLists.txt  ada_threshold.cpp  ada_threshold.h  ada_threshold.pro
released_plugins_more/visiocyte_plugins/affine_tps_warp/: affinetps_allindir.sh  main_swcwarp_affine_tps.cpp  plugin_warp_affine_tps.cpp  plugin_warp_affine_tps.h  plugin_warp_affine_tps.pro  (+2 more)
visiocyte_main/3drenderer/: 3drenderer.pro  CMakeLists.txt  GLee_r.h  ItemEditor.cpp  ItemEditor.h  barFigureDialog.cpp  barFigureDialog.h  glsl_r.cpp  glsl_r.h  gradients.cpp  gradients.h  marchingcubes.cpp  marchingcubes.h  nstroke.cpp  nstroke_tracing.cpp  qtr_widget.h  renderer.cpp  renderer.h  renderer_gl1.h  renderer_gl2.cpp  renderer_gl2.h  renderer_hit.cpp  renderer_labelfield.cpp  renderer_obj.cpp  renderer_tex.cpp  test_main.cpp  visiocyte_hoverpoints.cpp  visiocyte_hoverpoints.h  visiocyter_colormapDialog.cpp  visiocyter_colormapDialog.h  visiocyter_common.h  visiocyter_control_signal.cpp  visiocyter_glwidget.cpp  visiocyter_glwidget.h  visiocyter_mainwindow.cpp  visiocyter_mainwindow.h  visiocyter_surfaceDialog.cpp  visiocyter_surfaceDialog.h
visiocyte_main/plugin_loader/: CMakeLists.txt  get_plugin_versions.cpp  pluginDialog.cpp  pluginDialog.h  visiocyte_plugin_loader.cpp  visiocyte_plugin_loader.h
visiocyte_main/testing/: CMakeLists.txt
visiocyte_main/visiocyte/: CMakeLists.txt  ChannelTable.cpp  ChannelTable.h  CommandManager.cpp  DownloadManager.cpp  DownloadManager.h  Info.plist  atlas_viewer.cpp  atlas_viewer.h  colormap.cpp  colormap.h  compute_win_diff.h  compute_win_pca.h  dialog_curve_trace_para.h  dialog_imagecrop_bbox.h  dialog_imageresample.h  dialog_keypoint_features.cpp  dialog_keypoint_features.h  dialog_maskroi.h  dialog_pointcloudatlas_linkerloader.cpp  dialog_pointcloudatlas_linkerloader.h  dialog_rotate.cpp  dialog_rotate.h  dialog_update_checking.ui  dialog_update_downloading.ui  dialog_update_list.ui  dialog_update_options.ui  dialog_update_visiocyte.ui  dialog_url_entry.ui  glwidget.cpp  glwidget.h  histogramsimple.cpp  histogramsimple.h  idrawmain.cpp  idrawmain.h  import_filelist_dialog.h  import_filelistname.cpp  import_images_tool_dialog.h  import_tiffseries.cpp  landmark_property_dialog.cpp  (+62 more)
visiocyte_main/visiocytebase/: CMakeLists.txt
(+1788 files in other folders)
